# lcde

./: .gitignore  CMakeLists.txt  README.md  build.cc  debug.cc  error.cc  obsolete.cc  plot.cc  plot.py  test.cc  vec.cc
include/: cnmlcd.h  lcd.h  utils.h  vector.h
include/lcde/: builder.h  builderObject.h  cdf.h  gradient.h  knotObject.h  lcd.h  lcde.h  line.h  loglik.h  mm.h  model.h  obsolete.h  plot.h  pnnls.h  testunit.h  utils.h  vector.h
scripts/: datasets_for_plotting.txt  execute.sh  plot.sh  prepare.sh
src/: cnmlcd.h  gradient.h  lcd.h  line.h  vector.h
test/: debug.cc  header.h  plot.cc  rdata.h  test.cc
